--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -116,10 +116,10 @@
    ],
    "source": [
     "num = int(input(\"enter num : \"))\n",
-    "for i in range(1, 11):\n",
+    "for i in range(1, num+1):\n",
     "    for j in range(1, 11):\n",
-    "        r = i*j\n",
-    "        print(i, 'x', j, '=', r, end = '\\n')\n",
+    "        num = i*j\n",
+    "        print(i, 'x', j, '=', num, end = '\\n')\n",
     "    "
    ]
   },
